--- a/index.html
+++ b/index.html
@@ -15,15 +15,9 @@
             <p>Choose your weapon</p>
         </div>
         <div class="btn container">
-            <div class="button" id="rock">
-                <img class="rock button" src="assets\images\cave-painting.png" alt="Rock">
-            </div>
-            <div class="button" id="paper">
-                <img class="paper button" src="assets\images\document.png" alt="Paper">
-            </div>
-            <div class="button" id="scissor">
-                <img class="scissor button" src="assets\images\scissors-opened-tool-shape.png" alt="Scissor">
-            </div>
+            <button class="rock button">rock</button>
+            <button class="paper button">paper</button>
+            <button class="scissor button">scissor</button>
         </div>
     </div>
     <div class="Score">
