--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock Paper Scissor game</title>
+    <link rel="icon" href="assets/images/icon.jpeg">
     <link rel="stylesheet" href="assets/styles.css">
 </head>
 <body>
