Some issues were there in restart button, fixed it

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </div>
     <div class="center-container">
         <p class="final-result">Final Winner: </p>
-        <button class="restart-button" onclick="restartGame()">Restart Game</button>
+        <button id="resbtn" class="restart-button" onclick="restartGame()">Restart Game</button>
       </div>
     <script type="text/javascript" src="JS/index.js" charset="UTF-8"></script>
 </body>
