Final was showing before game end,now it doen't.

--- a/index.html
+++ b/index.html
@@ -34,10 +34,15 @@
             <div class="computer score">0</div>
         </div>
     </div>
-    <div class="center-container">
-        <p class="final-result">Final Winner: </p>
+    <div class="final-container">
+        <p id="finrslt" class="final-result">Final Winner: </p>
+    </div>
+    <div class="restart"></div>
         <button id="resbtn" class="restart-button" onclick="restartGame()">Restart Game</button>
-      </div>
+    </div>
     <script type="text/javascript" src="JS/index.js" charset="UTF-8"></script>
 </body>
+<footer class="footer">
+    <p class="footer-object">©2023 Akshay Shukla.</p>
+</footer>
 </html>
