--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
         <div>
             <p>Choose your weapon</p>
         </div>
-        <div class="btn container">
+        <div class="btn-container">
             <button type="button" class="rock button">rock</button>
-            <button class="paper button">paper</button>
-            <button class="scissor button">scissor</button>
+            <button type="button" class="paper button">paper</button>
+            <button type="button" class="scissor button">scissor</button>
         </div>
     </div>
     <div class="roundresult">
